Add logo image and enhance loading screens; improve visual consistency and user experience

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Custom ignored files
+src/questions_es.json
+src/questions_en.json
+src/locales.json
