--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.12.1",
     "mongodb": "^6.16.0",
     "next": "15.3.2",
     "react": "^19.0.0",
